Added Moldeo Control components

--- a/a2cli/src/app/app.component.html
+++ b/a2cli/src/app/app.component.html
@@ -1,5 +1,3 @@
-<h1>
-  {{title}}
-</h1>
-<app-threeviewer></app-threeviewer>
+<!--<app-threeviewer></app-threeviewer>-->
+<moldeocontrol></moldeocontrol>
 <moldeojs-view></moldeojs-view>
