Loading preeffect Erase! Working with functions!

--- a/a2cli/src/app/app.component.html
+++ b/a2cli/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--<app-threeviewer></app-threeviewer>-->
-<moldeocontrol></moldeocontrol>
+<!--<moldeocontrol></moldeocontrol>-->
 <moldeojs-view></moldeojs-view>
 <router-outlet></router-outlet>
