--- a/a2cli/src/app/moldeojs-view/moldeojs-view.component.html
+++ b/a2cli/src/app/moldeojs-view/moldeojs-view.component.html
@@ -1,2 +1,4 @@
-<h2>{{message}}</h2>
+<div style="display: block; position: absolute; float: left; font-size: 13px; color: #CCC;font-weight: bolder;">
+  {{message}}
+  </div>
 
