--- a/a2cli/src/app/app.component.html
+++ b/a2cli/src/app/app.component.html
@@ -2,3 +2,5 @@
 <!--<moldeocontrol></moldeocontrol>-->
 <moldeojs-view></moldeojs-view>
 <router-outlet></router-outlet>
+<touch-component></touch-component>
+
