Add init camera plugin

--- a/a2cli/src/app/app.component.html
+++ b/a2cli/src/app/app.component.html
@@ -1,6 +1,5 @@
 <!--<app-threeviewer></app-threeviewer>-->
 <!--<moldeocontrol></moldeocontrol>-->
 <moldeojs-view></moldeojs-view>
-<router-outlet></router-outlet>
-<touch-component></touch-component>
-
+<!--router-outlet></router-outlet-->
+<!--touch-component></touch-component-->
