--- a/a2cli/src/app/moldeojs-view/moldeojs-view.component.html
+++ b/a2cli/src/app/moldeojs-view/moldeojs-view.component.html
@@ -1,6 +1,7 @@
 <div style="display: block; position: absolute; float: left; font-size: 13px; color: #CCC;font-weight: bolder;">
-  {{message}}
+  {{message}} - mol: {{mol}}
   </div>
+
   <div id="webview_contenidos" #webview_contenidos class="contenido_over_hide">
     <div id="webview_titulo" #webview_titulo class="titulo">{{mititulo}}</div>
     <div id="webview_descripcion" #webview_descripcion class="descripcion">{{midescripcion}}</div>
