--- a/src/app/moldeojs-view/moldeojs-view.component.html
+++ b/src/app/moldeojs-view/moldeojs-view.component.html
@@ -1,4 +1,4 @@
-<div style="display: block; position: absolute; float: left; font-size: 13px; color: #CCC;font-weight: bolder;">
+<div class="running">
   {{message}} - mol: {{mol}}
   </div>
 
