--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,7 +7,7 @@
 
   display: block;
   position: fixed;
-  top: 40px;
+  top: 50px;
   right: 0px;
   background-color: rgba(0,0,0,0.5);
   border-radius: 10px;
@@ -15,7 +15,7 @@
   padding: 10px;
   font-size: 11px;
   font-family: Arial;
-  color: #AAA;
+  color: #BBB;
   margin: 5px;
 
 
