Update element with moldeojs-view and parameter src

--- a/src/app/moldeojs-view/moldeojs-view.component.html
+++ b/src/app/moldeojs-view/moldeojs-view.component.html
@@ -1,5 +1,5 @@
 <div style="display: block; position: absolute; float: left; font-size: 13px; color: #CCC;font-weight: bolder;">
-  {{message}} - mol: {{mol}}
+  {{message}} - mol: {{src}}
   </div>
 
   <div id="webview_contenidos" #webview_contenidos class="contenido_over_hide">
