--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav id="menu" class="navbar navbar-default">
+<!--<nav id="menu" class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed"
@@ -18,6 +18,8 @@
               <span class="last_received_message">{{recv_message}}</span>
             </span>
         </div>
+      -->
+      <!--
         <div class="collapse navbar-collapse"
             (collapsed)="collapsed($event)"
             (expanded)="expanded($event)"
@@ -47,12 +49,12 @@
                       <li><a href="#" (click)="loadsample($event,4)">Ejemplos 5</a></li>
                   </ul>
               </li>
-            -->
+
           </ul>
         </div>
 
     </div>
-</nav>
+</nav>-->
 <!--
 <div>
     <input type="text" #msgInput name="" value="">
@@ -65,10 +67,13 @@
 
   <div class="chat_msg_snd">
     <label>{{m_ConnectedId}}</label>
-    <input #message2send type="text" placeholder="Escribe aquí..." value=""/>
+    <input #clientcolor (change)="clientColor($event)" type="color" class="input_color">
+    <input #message2send type="text" class="input_text" placeholder="Escribe aquí..."
+    (keyup)="keyup($event)"
+    value=""/>
     <button class="btn btn-primary"
     (click)="compose_message($event)">
-      <span class="glyphicon glyphicon-play">&nbsp;</span> Send
+      <span class="glyphicon glyphicon-play">&nbsp;</span>
     </button>
   </div>
 
