--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -17,6 +17,7 @@
   font-size: 2em;
   font-family:  Courier;
   color: #FFF;
+  z-index: 1001;
 }
 
 input.input_text {
@@ -52,4 +53,18 @@ input.input_color {
 
 #menu {
   margin-bottom: 0px !important;
+}
+
+moldeojs-view {
+  display: block;
+  z-index: 0 !important;
+  opacity: 0.99 !important;
+}
+
+#full_chat_canvas {
+  /*width: 100%;
+  height: 100%;*/
+  display: block;
+  position: fixed;
+  z-index: -1;
 }
