--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -81,6 +81,27 @@
     <div class="message">{{msg}}</div>
   </div>
 </div>
+<div class="canvas_text">
+  <canvas id="full_chat_canvas" width="1024" height="1024">
+  </canvas>
+  <script>
+    window.onload = function() {
+      var context = new AudioContext();
+    }
+  </script>
+  <audio controls loop autoplay volume="50">
+    <source src="./assets/molrepos/moldeoorg/Speak/audios/BOCA.mp3" type="audio/mp3">
+  </audio>
+  <audio controls loop autoplay volume="50">
+    <source src="./assets/molrepos/moldeoorg/Speak/audios/LATIDOS.mp3" type="audio/mp3">
+  </audio>
+  <audio controls loop autoplay volume="50">
+    <source src="./assets/molrepos/moldeoorg/Speak/audios/BRAZO-DERECHO.mp3" type="audio/mp3">
+  </audio>
+  <audio controls loop autoplay volume="50">
+    <source src="./assets/molrepos/moldeoorg/Speak/audios/BRAZO-IZQUIERDO.mp3" type="audio/mp3">
+  </audio>
+</div>
 <!--
 <button type="button" class="btn btn-primary"
         tooltip="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
