--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,7 +64,9 @@
 </div>
 -->
 <div class="chat_online">
+  <div #oscmsgbox class="osc_msg_snd">
 
+  </div>
   <div #chatmsgbox class="chat_msg_snd">
     <label>{{m_ConnectedId}}</label>
     <table >
