--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -88,16 +88,18 @@
 <div class="canvas_text">
   <canvas id="full_chat_canvas" width="1024" height="1024">
   </canvas>
-  <audio controls preload loop autoplay volume="50">
+</div>
+<div class="audios">
+  <audio id="audio1" controls preload loop autoplay volume="50">
     <source src="./assets/molrepos/moldeoorg/Speak/audios/BOCA.mp3" type="audio/mp3">
   </audio>
-  <audio controls preload loop autoplay volume="50">
+  <audio id="audio2" controls preload loop autoplay volume="50">
     <source src="./assets/molrepos/moldeoorg/Speak/audios/LATIDOS.mp3" type="audio/mp3">
   </audio>
-  <audio controls preload loop autoplay volume="50">
+  <audio id="audio3" controls preload loop autoplay volume="50">
     <source src="./assets/molrepos/moldeoorg/Speak/audios/BRAZO-DERECHO.mp3" type="audio/mp3">
   </audio>
-  <audio controls preload loop autoplay volume="50">
+  <audio id="audio4" controls preload loop autoplay volume="50">
     <source src="./assets/molrepos/moldeoorg/Speak/audios/BRAZO-IZQUIERDO.mp3" type="audio/mp3">
   </audio>
 </div>
