Upgraded to Angular-Cli 8.3.22 / Angular 8.2.14, Typescript 3.5.3, Three.js 0.110.0, working nice!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default">
-    <div class="container-fluid">
+    <!--div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed"
           (click)="isCollapsed = !isCollapsed"
@@ -26,10 +26,10 @@
               </a></li>
               <li><a routerLink="/moldeojs" routerLinkActive="active">base</a></li>
               <li><a href="https://www.moldeo.org/forum/how-to" target="_blank">Moldeo JS API</a></li>
-              <li class="dropdown" dropdown> <!-- {1} -->
-                  <a dropdownToggle role="button"> <!-- {2} -->
+              <li class="dropdown" dropdown>
+                  <a dropdownToggle role="button">
                     Samples <span class="caret"></span></a>
-                  <ul *dropdownMenu class="dropdown-menu"> <!-- {3} -->
+                  <ul *dropdownMenu class="dropdown-menu">
                       <li><a href="#" (click)="loadsample($event,0)">Ejemplo 1</a></li>
                       <li><a href="#" (click)="loadsample($event,1)">Ejemplo 2</a></li>
                       <li><a href="#" (click)="loadsample($event,2)">Ejemplo 3</a></li>
@@ -41,7 +41,7 @@
               </li>
           </ul>
         </div>
-    </div>
+    </div-->    
 </nav>
 <!--
 <button type="button" class="btn btn-primary"
