--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,59 @@
 
 .logo {
-  max-height: 32px;
+  max-height: 22px;
+}
+
+navbar,
+.navbar {
+  border-radius: 0px !important;
+  margin-bottom: 0px !important;
+  min-height: 32px !important;
+  z-index: 100;
+}
+
+.navbar-brand {
+  height: auto !important;
+  margin-top: 10px !important;
+  margin-bottom: 10px !important;
+}
+
+body, *, div, span, li, a {
+  font-size: 12px;
+  font-weight: normal;
+  font-family: Arial;
+  line-height: 14px !important;
+  letter-spacing: 1px;
+  color: #FFFFFF !important;
+}
+
+.navbar-brand {
+  /*padding: 5px 10px 5px 10px;*/
+  display: block !important;
+  padding: 5px 10px 5px 10px !important;
+  border: 1px solid #000000 !important;
+  margin-left: 0px !important;
+  font-weight: bold !important;
+}
+.brand a:hover .navbar-brand {
+  border: 1px solid #FFFFFF !important;
+}
+.navbar-nav {
+  margin-left: 10px !important;
+}
+.navbar-nav li a {
+  height: auto !important;
+  margin-top: 10px;
+  margin-left: 5px;
+  padding: 5px 10px 5px 10px !important;
+  border: 1px solid #000000 !important;
+  max-width: 100px !important;
+  width: auto !important;
+  min-width: 50px !important;
+}
+
+.navbar-nav li a.active,
+.navbar-nav li a:hover,
+.navbar-nav li a:active {
+  padding: 5px 10px 5px 10px !important;
+  border: 1px solid #EEEEEE !important;
 }
