--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,86 @@
 /* You can add global styles to this file, and also import other style files */
 
 body, html {
-  overflow: hidden;
+  overflow-x: hidden !important;
+  overflow-y: hidden !important;
   margin:0;
   padding:0;
+
+  width : 100%;
+  height: 100%;
+}
+
+@media (orientation: landscape) {
+  body {
+    /*transform: rotate(-90deg);*/
+  }
+}
+
+@media (orientation: portrait) {
+  #btn_start {
+    transform: rotate(-90deg);
+  }
+}
+
+.ready_to_start button {
+  animation: glow_ready 1s infinite alternate;
+}
+
+.rotate_to_start button {
+  animation: glow_warning 1s infinite alternate;
+}
+
+.ready_to_load button {
+  animation: glow_loading 1s infinite alternate;
+}
+
+
+@keyframes glow_ready {
+  from {
+    box-shadow: 0 0 5px -5px #00ffa0;
+  }
+  to {
+    box-shadow: 0 0 5px 5px #00ffa0;
+  }
+}
+
+@keyframes glow_warning {
+  from {
+    box-shadow: 0 0 5px 2px #f4f000;
+  }
+  to {
+    box-shadow: 0 0 5px 5px #f4f000;
+  }
+}
+
+@keyframes glow_loading {
+  from {
+    box-shadow: 0 0 5px -5px #ff0000;
+  }
+  to {
+    box-shadow: 0 0 5px 5px #ff0000;
+  }
+}
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Opera and Firefox */
+}
+
+
+button > svg {
+  display: block !important;
+  position: absolute !important;
+  width: 100px !important;
+  height: 100px !important;
+  left: 0px !important;
+  top: 0px !important;
+  z-index: 12000;
+  margin: 0px;
+  padding: 0px;
 }
