--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,165 @@
 
 .logo {
-  max-height: 32px;
+  max-height: 22px;
+}
+
+.chat_msg_rec {
+  height: 300px;
+
+}
+
+.chat_online {
+  display: block;
+  position: fixed;
+  bottom: 15%;
+  right: 2%;
+  width: 50%;
+  margin-left: -25%;
+  background-color: rgba(0,0,0,0.25);
+  border-radius: 10px;
+  border: solid 2px #555;
+  padding: 10px;
+  font-size: 2em;
+  font-family:  monospace;
+  color: #FFF;
+  z-index: 1001;
+}
+
+input.input_text {
+  background-color: transparent;
+  font-family: monospace;
+  border: solid 0px #555;
+  padding: 5px;
+  width: 100%;
+  color: #00ffe4;
+}
+
+.chat_msg_snd {
+  display: block;
+  border: solid 1px #555;
+  border-radius: 10px;
+}
+
+.chat_msg_snd>label {
+  display: none;
+}
+
+.chat_msg_snd>table {
+  width: 100%;
+}
+
+button.btn {
+  background-color: transparent;
+  border: solid 1px #555;
+  margin: 8px;
+  padding: 8px;
+  color: #777;
+  font-family:  monospace;
+  font-size: 2em;
+}
+
+.btn-send {
+  display: block;
+  position: relative;
+  float: right;
+  right: 0px;
+  top: 4px;
+  border: solid 0px !important;
+  padding: 0px !important;
+  margin: 0px !important;
+  font-size: 30px !important;
+}
+
+input.input_color {
+  height: 25px;
+  width: 20px;
+  margin: 0px;
+  padding: 0px;
+  border: 0px !important;
+  background-color: #000 !important;
+  margin-left: 6px;
+}
+
+.their_message {
+  left: auto;
+  right: 0px;
+}
+
+#menu {
+  margin-bottom: 0px !important;
+}
+
+moldeojs-view {
+  display: block;
+  z-index: 0 !important;
+  opacity: 1.0 !important;
+}
+
+#full_chat_canvas {
+  /*width: 100%;
+  height: 100%;*/
+  display: block;
+  position: fixed;
+  z-index: -1;
+}
+
+.canvas_text {
+  display: none;
+  position: fixed;
+  opacity: 0.0;
+}
+
+navbar,
+.navbar {
+  border-radius: 0px !important;
+  margin-bottom: 0px !important;
+  min-height: 32px !important;
+  z-index: 100;
+}
+
+.navbar-brand {
+  height: auto !important;
+  margin-top: 10px !important;
+  margin-bottom: 10px !important;
+}
+
+body, *, div, span, li, a {
+  font-size: 12px;
+  font-weight: normal;
+  font-family: monospace;
+  line-height: 14px !important;
+  letter-spacing: 1px;
+  color: #FFFFFF !important;
+}
+
+.navbar-brand {
+  /*padding: 5px 10px 5px 10px;*/
+  display: block !important;
+  padding: 5px 10px 5px 10px !important;
+  border: 1px solid #000000 !important;
+  margin-left: 0px !important;
+  font-weight: bold !important;
+}
+.brand a:hover .navbar-brand {
+  border: 1px solid #FFFFFF !important;
+}
+.navbar-nav {
+  margin-left: 10px !important;
+}
+.navbar-nav li a {
+  height: auto !important;
+  margin-top: 10px;
+  margin-left: 5px;
+  padding: 5px 10px 5px 10px !important;
+  border: 1px solid #000000 !important;
+  max-width: 100px !important;
+  width: auto !important;
+  min-width: 50px !important;
+}
+
+.navbar-nav li a.active,
+.navbar-nav li a:hover,
+.navbar-nav li a:active {
+  padding: 5px 10px 5px 10px !important;
+  border: 1px solid #EEEEEE !important;
 }
