--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-default">
-    <!--div class="container-fluid">
+<nav class="navbar navbar-default" style="display: none; border:0px;left:0px;top:0px;background-color: black;">
+    <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed"
           (click)="isCollapsed = !isCollapsed"
@@ -11,9 +11,9 @@
             <span class="icon-bar"></span>
           </button>
             <a class="navbar-brand">
-              <img src="/assets/data/icons/M@_moldeo.svg" class="logo">
+              <img src="/assets/data/icons/moldeo_logo.svg" class="logo" title="Moldeo@JS">
             </a>
-            <span class="navbar-brand">Moldeo JS</span>
+            <span class="navbar-brand"></span>
         </div>
         <div class="collapse navbar-collapse"
             (collapsed)="collapsed($event)"
@@ -41,7 +41,7 @@
               </li>
           </ul>
         </div>
-    </div-->    
+    </div>
 </nav>
 <!--
 <button type="button" class="btn btn-primary"
@@ -68,7 +68,48 @@ Button with tooltip
 <!--<app-threeviewer></app-threeviewer>-->
 <!--<moldeocontrol></moldeocontrol>-->
 <!--<ng-template #dynamic></ng-template>-->
-<moldeojs-view [mol]="this.sample"></moldeojs-view>
+<moldeojs-interface
+  id="moldeojsinterface"
+  #moldeojsinterface
+  [mol]="this.sample"
+  [moldeojsview]="this.moldeojsview"></moldeojs-interface>
+<!--iframe src="" width="100%" height="100%">
+  no final
+</iframe-->
+<div class="chat_online" style="display: none;">
+  <div #oscmsgbox class="osc_msg_snd">
+
+  </div>
+  <div class="chat_msg_rec" #message2recv>
+    <div class="message">{{msg}}</div>
+  </div>
+  <div #chatmsgbox class="chat_msg_snd">
+    <label>{{m_ConnectedId}}</label>
+    <table >
+      <tr>
+        <td><input title="Cambiar mi color" value="#00ffe4" #clientcolor (change)="clientColor($event)" type="color" class="input_color"></td>
+        <td><input #message2send type="text" class="input_text" placeholder="{{placeholder}}"
+    (keyup)="keyup($event)"
+    value=""/></td>
+        <td style="width: 20px"><button class="btn btn-primary btn-send"
+    (click)="compose_message($event)"><span class="fa-send">ENVIAR</span></button></td>
+      </tr>
+    </table>
+  </div>
+
+
+</div>
+<div class="canvas_text"  style="display: none;">
+  <canvas id="full_chat_canvas" width="1024" height="1024">
+  </canvas>
+</div>
+
+<moldeojs-view
+  id="moldeojsview"
+  #moldeojsview
+  [mol]="this.sample"
+  (window:resize)="onResize($event)"
+  (loaded)="this.sampleLoaded($event)"></moldeojs-view>
 <!--router-outlet></router-outlet-->
 <!--touch-component></touch-component-->
-<router-outlet></router-outlet>
+<!--router-outlet></router-outlet-->
