--- a/src/app/moldeojs-view/moldeojs-view.component.css
+++ b/src/app/moldeojs-view/moldeojs-view.component.css
@@ -10,11 +10,37 @@
   background-color: rgba(255,255,255,0.2);
 }
 
+#overlayer {
+  display: none;
+  width: 80%;
+  left: 10%;
+  border: solid 1px #100;
+  padding: 15px;
+  top: 10%;
+  font-family: monospace;
+  position: absolute;
+  float: left;
+  letter-spacing: 0.1em;
+  font-size: 14px;
+  line-height:20px;
+  color: #F00;
+  font-weight: normal;
+  text-align: left;
+  z-index: 0;
+}
 
+#moldeomessage {
+  display: none;
+  position: absolute;
+  float: left;
+  font-size: 13px;
+  color: #CCC;
+  font-weight: bolder;
+}
 
 .contenido_over {
   color: #FFFFFF;
-  font-family: 'Tahoma';
+  font-family: monospace;
   font-size: 20px;
   transition: all 1s;
   opacity: 1.0;
@@ -22,7 +48,7 @@
 
 .contenido_over_hide {
   color: #FFFFFF;
-  font-family: 'Tahoma';
+  font-family: monospace;
   font-size: 20px;
   transition: all 1s;
   opacity: 0.0;
@@ -63,4 +89,23 @@
 .descripcion p {
   margin: 0px !important;
   padding: 0px !important;
+}
+
+.moldeo_control button {
+  /*padding-right: 5px;*/
+  padding: 0px;
+  margin: 7px;
+  width: 32px;
+  height: 32px;
+  font-size: 20px;
+  background-color: rgba(0,0,0,0.0) !important;
+  color: #FFFFFF !important;
+  border: 0px solid #000000 !important;
+}
+
+#moldeojsview canvas {
+  left: 0px !important;
+  top: 0px !important;
+  position: fixed !important;
+  display: block !important;
 }
