--- a/src/app/moldeojs-view/moldeojs-view.component.html
+++ b/src/app/moldeojs-view/moldeojs-view.component.html
@@ -1,8 +1,25 @@
-<div style="display: block; position: absolute; float: left; font-size: 13px; color: #CCC;font-weight: bolder;">
-  {{message}} - mol: {{mol}}
+<div id="moldeomessage" #moldeomessage>
+  <span>{{message}} - mol: {{mol}}</span>
+</div>
+
+<div id="overlayer" [innerHTML]="overlayerhtml" #overlayer>
+  <span>{{overlayer}}</span>
+</div>
+
+  <div id="moldeobuttons" #moldeobuttons class="btn-group moldeo_control" role="group" aria-label="..." style="position: fixed; display: block; right: 160px; top: 10px; z-index: 10000;">
+    <button id="sample_0" type="button" class="btn btn-default" (click)="loadsample($event,0);"><span class="glyphicon glyphicon-record" style="color: red;font-size: 30px;" aria-hidden="false"></span></button>
+    <button id="sample_1" type="button" class="btn btn-default" (click)="loadsample($event,1);"><span class="glyphicon glyphicon-record" style="color: green;font-size: 30px;" aria-hidden="false"></span></button>
+    <button id="sample_2" type="button" class="btn btn-default" (click)="loadsample($event,2);"><span class="glyphicon glyphicon-record" style="color: blue;font-size: 30px;" aria-hidden="false"></span></button>
+    <button id="sample_3" type="button" class="btn btn-default" (click)="loadsample($event,3);"><span class="glyphicon glyphicon-record" style="color: yellow;font-size: 30px;" aria-hidden="false"></span></button>
+
+    <button type="button" class="btn btn-default" (click)="stop();"><span class="glyphicon glyphicon-stop" aria-hidden="false"></span></button>
+    <button type="button" class="btn btn-default" (click)="play();"><span class="glyphicon glyphicon-play" aria-hidden="false"></span></button>
+    <button type="button" class="btn btn-default" (click)="fullscreen();"><span class="glyphicon glyphicon-fullscreen" aria-hidden="false"></span></button>
+    <!--button type="button" class="btn btn-default" (click)="pause();"><span class="glyphicon glyphicon-pause" aria-hidden="true"></span></button-->
+    <button type="button" id="audioonoff" class="btn btn-default" (click)="audioonoff();"><span #audioonoff_ico class="glyphicon glyphicon-volume-off" aria-hidden="false"></span></button>
   </div>
 
   <div id="webview_contenidos" #webview_contenidos class="contenido_over_hide">
-    <div id="webview_titulo" #webview_titulo class="titulo">{{mititulo}}</div>
+    <div id="webview_titulo" #webview_titulo class="titulo">MOLDEO@JS {{mititulo}}</div>
     <div id="webview_descripcion" #webview_descripcion class="descripcion">{{midescripcion}}</div>
   </div>
